Fixed workspaces gap

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -44,6 +44,7 @@ window#waybar {
 }
 
 #workspaces {
+    padding: 0;
     border-radius: 10;
 }
 
